<resources>
    <string name="app_name">Media Interaktif</string>
    <string name="splash_welcome">Selamat Datang di</string>
    <string name="splash_title">MEDIA PEMBELAJARAN INTERAKTIF BERBASIS ANDROID PADA MATA PELAJARAN
        TATA KELOLA SARANA DAN PRASARANA KELAS XII OTOMATISASI TATA KELOLA PERKANTORAN</string>
    <string name="start">Mulai</string>
    <string name="email">Alamat Email</string>
    <string name="password">Kata Sandi</string>
    <string name="login">MASUK</string>
    <string name="no_whatsapp">No. Whatsapp</string>
    <string name="daftar">DAFTAR</string>
    <string name="atau_masuk_dengan">Atau Masuk dengan</string>
    <string name="sudah_punya_akun">Sudah punya akun? </string>
    <string name="belum_punya_akun">Belum punya akun? </string>
    <string name="kompetensi_txt_1">KOMPETENSI DASAR :</string>
    <string name="kompetensi_txt_2">3.13.Melakukan inventarisasi sarana dan prasarana\n4.13.Melakukan kegiatan inventarisasi sarana dan prasarana</string>
    <string name="kompetensi_txt_3">INDIKATOR PENCAPAIAN KOMPETENSI :</string>
    <string name="kompetensi_txt_4">1.	Menjelaskan definisi  Inventarisasi sarana dan prasarana\n2.	Melakukan Inventarisasi sarana dan prasarana\n3.	Menganalisis Inventarisasi sarana dan prasarana\n4.	melakukan administrasi inventarisasi sarana dan prasarana</string>
    <string name="kompetensi_txt_5">TUJUAN PEMBELAJARAN :</string>
    <string name="kompetensi_txt_6">1.	Peserta didik dapat menjelaskan definisi inventarisasi sarana dan prasarana\n2.	Peserta didik dapat melakukan Inventarisasi sarana dan prasarana\n3.	Peserta didik dapat menganalisis Inventarisasi sarana dan prasarana\n4.	Peserta didik dapat melakukan administrasi inventarisasi</string>
    <string name="home">Home</string>
    <string name="materi">Materi</string>
    <string name="profile">Profile</string>
    <string name="app_desc">Aplikasi ini adalah aplikasi media pembelajaran tentang inventaris. Didalam aplikasi ini terdapat materi dan latihan soal beserta kunci jawabannya.</string>
    <string name="pilihan_materi">Pilihan Materi</string>
    <string name="pilihan_video">Pilihan Video</string>
    <string name="nama">Nama :</string>
    <string name="dosen_pembimbing">Dosen Pembimbing:</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="submit">SUBMIT</string>
    <string name="ulangi">Ulangi</string>
    <string name="lihat_jawaban">Lihat Jawaban</string>
    <string name="salah">Salah</string>
    <string name="wrong">wrong</string>
    <string name="daftar_pustaka">Daftar Pustaka</string>
    <string name="logout">Logout</string>
    <string name="bantuan">bantuan</string>
    <string name="latihan">Latihan</string>
    <string name="putri_sherly_indrayanti">PUTRI SHERLY INDRAYANTI</string>
    <string name="jurpend">JURUSAN PENDIDIKAN\nADMINISTRASI PERKANTORAN\nFE UNY</string>
    <string name="dosbing">DRS. PURWANTO, M.M , M.Pd</string>
    <string name="jawab">Jawab</string>
    <string name="welcome">welcome</string>
    <string name="quiz">Quiz</string>
    <string name="click_for_continue">Klik untuk lanjut</string>
    <string name="nilai_anda">Selamat!\nNilai Anda</string>
    <string name="kompetensi">Kompetensi</string>
    <string name="video">Buka Video</string>
    <string name="restart_quiz">Ulangi</string>
    <string name="help">Bantuan</string>
    <string name="nim">NIM:</string>
    <string name="nimNum">16802241012</string>
    <string name="rumiyati_s_e">Rumiyati, S.E</string>
    <string name="ahli_materi">Ahli Materi:</string>
    <string name="ahli_media">Ahli Media:</string>
    <string name="dr_sutirman">Dr. Sutirman</string>
    <string name="atau_daftar_dengan">Atau Daftar dengan</string>
</resources>