<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mediainteraktif.ui.home.HomeFragmentNav"
        android:label="@string/home"
        tools:layout="@layout/fragment_home_nav" />

    <fragment
        android:id="@+id/navigation_materi"
        android:name="com.mediainteraktif.ui.materi.MateriFragmentNav"
        android:label="@string/materi"
        tools:layout="@layout/fragment_materi_nav" />

    <fragment
        android:id="@+id/navigation_quiz"
        android:name="com.mediainteraktif.ui.quiz.QuizFragment"
        android:label="@string/latihan"
        tools:layout="@layout/fragment_latihan_nav" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.mediainteraktif.ui.profile.ProfileFragmentNav"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile_nav" />
</navigation>