<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/app_dimen_default"
    tools:context=".KompetensiActivity">

  <TextView
      android:id="@+id/kompetensi_txt_1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:text="@string/kompetensi_txt_1"
      android:textSize="16sp" />

  <TextView
      android:id="@+id/kompetensi_txt_2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/kompetensi_txt_1"
      android:text="@string/kompetensi_txt_2" />

  <TextView
      android:id="@+id/kompetensi_txt_3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/app_dimen_default"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/kompetensi_txt_2"
      android:text="@string/kompetensi_txt_3"
      android:textSize="16sp" />

  <TextView
      android:id="@+id/kompetensi_txt_4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/kompetensi_txt_3"
      android:text="@string/kompetensi_txt_4" />

  <TextView
      android:id="@+id/kompetensi_txt_5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/app_dimen_default"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/kompetensi_txt_4"
      android:text="@string/kompetensi_txt_5"
      android:textSize="16sp" />

  <TextView
      android:id="@+id/kompetensi_txt_6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/kompetensi_txt_5"
      android:text="@string/kompetensi_txt_6" />

  <LinearLayout
      android:layout_width="200dp"
      android:layout_height="50dp"
      android:background="@drawable/shape_rounded_10dp_corner"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:orientation="horizontal"
      android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="24sp"
        android:textStyle="bold" />

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>