<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity"
    android:padding="@dimen/app_dimen_default">
    
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/login_img_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_logo_uny"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/login_layout_data"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/login_img_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/email" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:background="@drawable/shape_rounded_8dp_corner"
            android:layout_marginTop="8dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:src="@drawable/ic_outline_email_24" />

            <EditText
                android:id="@+id/login_inp_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/FirebaseUI.TextInputEditText.EmailField"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_dimen_default"
            android:textStyle="bold"
            android:text="@string/password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:background="@drawable/shape_rounded_8dp_corner"
            android:layout_marginTop="8dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:src="@drawable/ic_outline_lock_24" />

            <EditText
                android:id="@+id/login_inp_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/FirebaseUI.TextInputEditText.PasswordField"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/login_btn_masuk"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_rounded_10dp_corner"
        android:text="@string/login"
        android:textColor="@color/littleBlue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_layout_data" />

    <TextView
        android:id="@+id/login_txt_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/atau_masuk_dengan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_btn_masuk" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/login_btn_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_dimen_default"
        app:layout_constraintTop_toBottomOf="@+id/login_txt_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belum_punya_akun"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/login_txt_daftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daftar"
            android:layout_marginStart="4dp"
            android:textColor="#FEC001"
            android:textStyle="bold"
            android:textSize="18sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>