<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SplashActivity"
    android:padding="@dimen/app_dimen_default"
    android:background="@drawable/splash_bg">

    <LinearLayout
        android:padding="@dimen/app_dimen_default"
        android:id="@+id/splash_txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/shape_rounded_fill_14dp"
        android:backgroundTint="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/splash_btn_start">

        <ImageView
            android:id="@+id/splash_img_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_app" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_dimen_default"
            android:text="@string/splash_welcome"
            android:textAlignment="center"
            android:textColor="@color/littleBlue"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_dimen_default"
            android:paddingStart="@dimen/app_dimen_default"
            android:paddingEnd="@dimen/app_dimen_default"
            android:text="@string/splash_title"
            android:textAlignment="center"
            android:textColor="@color/littleBlue"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/splash_btn_start"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:backgroundTint="@android:color/white"
        android:background="@drawable/shape_rounded_fill_10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/littleBlue"
            android:layout_gravity="center" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="@dimen/app_dimen_default"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_arrow_forward_24"
            android:contentDescription="@string/start" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>