<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/app_dimen_default"
    tools:context=".RegisterActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/register_img_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_logo_uny"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/register_layout_data"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/register_img_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/email" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:background="@drawable/shape_rounded_8dp_corner"
            android:layout_marginTop="8dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:src="@drawable/ic_outline_email_24"     />

            <EditText
                android:id="@+id/register_inp_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_dimen_default"
            android:textStyle="bold"
            android:text="No. Whatsapp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:background="@drawable/shape_rounded_8dp_corner"
            android:layout_marginTop="8dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_call_24" />

            <EditText
                android:id="@+id/register_inp_wa"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_dimen_default"
            android:textStyle="bold"
            android:text="Kata Sandi" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:background="@drawable/shape_rounded_8dp_corner"
            android:layout_marginTop="8dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:src="@drawable/ic_outline_lock_24" />

            <EditText
                android:id="@+id/register_inp_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/register_btn_daftar"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/shape_rounded_10dp_corner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_layout_data"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/littleBlue"
        android:text="@string/daftar"/>

    <TextView
        android:id="@+id/register_txt_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/atau_masuk_dengan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_btn_daftar" />

    <ImageView
        android:id="@+id/register_img_google"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_logo_google"
        android:layout_marginTop="@dimen/app_dimen_default"
        app:layout_constraintTop_toBottomOf="@+id/register_txt_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sudah_punya_akun"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="18sp"
            android:textColor="#FEC001"
            android:textStyle="bold"
            android:layout_marginStart="4dp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>